--- a/DACK/DACK/DACK.csproj
+++ b/DACK/DACK/DACK.csproj
@@ -277,6 +277,7 @@
     <Content Include="assets\img\product\product-7.jpg" />
     <Content Include="assets\img\product\product-8.jpg" />
     <Content Include="assets\img\product\product-9.jpg" />
+    <Content Include="assets\img\product\quan-short-desc1.jpg" />
     <Content Include="assets\img\product\quan-short2.jpg" />
     <Content Include="assets\img\shop-details\details-payment.png" />
     <Content Include="assets\img\shop-details\product-big-2.png" />
